# engram-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/engram_mcp/: __init__.py  __main__.py  client.py  formatting.py  server.py  tools.py
tests/smoke/: Dockerfile
