[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-mcp"
version = "0.1.0"
description = "MCP plugin that connects Cursor / Claude Code / Claude Desktop to your Engram workspace."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Hidden Ones Dev" }]
keywords = ["mcp", "model-context-protocol", "engram", "rag", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
engram-mcp = "engram_mcp.__main__:cli"

[project.urls]
Homepage = "https://github.com/hidden-ones-dev/engram-mcp"
Issues = "https://github.com/hidden-ones-dev/engram-mcp/issues"
Source = "https://github.com/hidden-ones-dev/engram-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/engram_mcp"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
